@@ -19,10 +19,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M5</version>
-                <configuration>
-                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
-                    <failIfNoTests>false</failIfNoTests>
-                </configuration>
             </plugin>
         </plugins>
     </build>
